# ChangeLog for sys-cluster/magma-plugins
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/magma-plugins/ChangeLog,v 1.2 2005/03/07 04:20:33 xmerlin Exp $

  07 Mar 2005; Christian Zoffoli <xmerlin@gentoo.org>
  magma-plugins-1.0_pre5.ebuild:
  improved ebuild, added selective gulm module build

*magma-plugins-1.0_pre5 (28 Jan 2005)

  28 Jan 2005; Christian Zoffoli <xmerlin@gentoo.org> +metadata.xml,
  +magma-plugins-1.0_pre5.ebuild:
  new in portage
