@@ -1,0 +1,1 @@
+MD5 76f59c7c94424ccc1d4288794a21ea32 magma-plugins-1.0-pre18.tar.gz 31574
