@@ -1,6 +1,12 @@
 # ChangeLog for sys-cluster/magma-plugins
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/magma-plugins/ChangeLog,v 1.2 2005/03/07 04:20:33 xmerlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/magma-plugins/ChangeLog,v 1.3 2005/03/19 16:18:45 xmerlin Exp $
+
+*magma-plugins-1.0_pre18 (19 Mar 2005)
+
+  19 Mar 2005; Christian Zoffoli <xmerlin@gentoo.org>
+  +magma-plugins-1.0_pre18.ebuild:
+  magma-plugins-1.0_pre18 in portage
 
   07 Mar 2005; Christian Zoffoli <xmerlin@gentoo.org>
   magma-plugins-1.0_pre5.ebuild:
